# swagdemo/echodemo/docs/swagger.json
@@ -4,6 +4,51 @@
         "contact": {}
     },
     "paths": {
+        "/accounts/add": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Some Endpoint",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "example": 1,
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 20,
+                        "minimum": 1,
+                        "type": "integer",
+                        "example": 10,
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/accounts/delete": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Some Endpoint",
+                "parameters": [
+                    {
+                        "description": "Query Params",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/controller.IndexAddParam"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/accounts/list": {
             "get": {
                 "description": "get string by ID",
@@ -106,6 +151,22 @@
         }
     },
     "definitions": {
+        "controller.IndexAddParam": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "example": 1
+                },
+                "page_size": {
+                    "type": "integer",
+                    "maximum": 20,
+                    "minimum": 1,
+                    "example": 10
+                }
+            }
+        },
         "util.HTTPError": {
             "type": "object",
             "properties": {
